[package]
name = "gym-chess-pleco"
version = "0.1.0"
edition = "2021"
authors = ["genyrosk <e.roskach@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gym_chess_pleco"
crate-type = ["cdylib"]

[dependencies]
pleco = "0.5.0"
pyo3 = "0.18.1"
# pyo3 = { version = "0.18.1", features = ["extension-module"] }

[[bin]]
name = "bin"
path = "src/main.rs"
